Define some system properties differently in tests
They seem to not take effect otherwise

git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1896602 13f79535-47bb-0310-9956-ffa450edef68